src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Closest_Account_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Closest Account Team Member to this contact</description>
        <label>Closest Account Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Team_Member__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Team_Member__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PictureUrl__c</fullName>
        <label>PictureUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IF(PictureUrl__c != null, IMAGE(PictureUrl__c, &quot;&quot;, 64, 64) , IMAGE(&quot;/img/social/unknown_profile_pic.png&quot;, &quot;&quot;, 64, 64) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incluir al Organigrama</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>